--- a/hypnos.css
+++ b/hypnos.css
@@ -18,46 +18,77 @@ span {
 img {
   border-radius: 5%;
 }
-.Marseille {
-  border: 3px solid #e9b472;
-  box-shadow: 8px 8px 5px black;
+img:hover {
+  transform: scale(1.08);
 }
-.Paris {
+.décoration {
   border: 3px solid #e9b472;
   box-shadow: 8px 8px 5px black;
 }
 
-.Corse {
-  border: 3px solid #e9b472;
-  box-shadow: 8px 8px 5px black;
-}
 p {
   color: aliceblue;
   text-align: center;
 }
+h2 {
+  color: #e9b472;
+  font-family: Kanit;
+}
+a {
+  text-decoration: none;
+  color: #e9b472;
+}
+a:hover {
+  color: white;
+  transition: 0.4s;
+}
 
 .main {
   width: 100%;
-  min-height: 73.1vh;
+  padding-top: 100px;
   display: flex;
   justify-content: space-around;
 }
 
 .table1 {
-  min-height: 73.1vh;
   min-width: 33.1vw;
   text-align: center;
 }
 
 .table2 {
-  min-height: 73.1vh;
   min-width: 33.1vw;
 
   text-align: center;
 }
 .table3 {
-  min-height: 73.1vh;
   min-width: 33.1vw;
 
   text-align: center;
+}
+
+.main2 {
+  width: 100%;
+  padding-top: 100px;
+  display: flex;
+  justify-content: space-around;
+}
+.table4 {
+  min-width: 33.1vw;
+
+  text-align: center;
+}
+.table5 {
+  min-width: 33.1vw;
+
+  text-align: center;
+}
+.table6 {
+  min-width: 33.1vw;
+
+  text-align: center;
+}
+.table7 {
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
