--- a/Paris Palace.css
+++ b/Paris Palace.css
@@ -5,15 +5,14 @@ span {
   color: aliceblue;
   font-family: Kanit;
 }
-.décoration {
+/* top */
+img {
+  border-radius: 5%;
   border: 3px solid #e9b472;
   box-shadow: 8px 8px 5px black;
 }
-img {
-  border-radius: 5%;
-}
 
-h2 {
+h1 {
   color: #e9b472;
   font-family: Kanit;
 }
@@ -22,9 +21,65 @@ a {
   color: #e9b472;
 }
 
-.main {
-  width: 100%;
+/* second code */
+
+@keyframes display {
+  0% {
+    transform: translateX(200px);
+    opacity: 0;
+  }
+  10% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  20% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  30% {
+    transform: translateX(-200px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(-200px);
+    opacity: 0;
+  }
+}
+
+.Paris-slide {
+  width: 100vw;
+  height: 300px;
   padding-top: 100px;
-  display: flex;
-  justify-content: space-around;
+  padding-left: 350px;
+}
+
+.Paris-slide > img {
+  position: absolute;
+  top: O;
+
+  opacity: 0;
+  animation: display 10s infinite;
+}
+
+img:nth-child(2) {
+  animation-delay: 2s;
+}
+img:nth-child(3) {
+  animation-delay: 4s;
+}
+img:nth-child(4) {
+  animation-delay: 6s;
+}
+img:nth-child(5) {
+  animation-delay: 8s;
+}
+
+.desc {
+  display: block;
+  color: #e9b472;
+  font-family: Kanit;
+  padding-left: 950px;
+}
+.desc > p {
+  color: aliceblue;
 }
